--- a/src/components/components.css
+++ b/src/components/components.css
@@ -113,3 +113,10 @@ p {
     align-items: center;
     justify-content: center;
 }
+/* //card */
+#cardBody{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+}
